@@ -296,11 +296,11 @@ public class BitDocSet extends DocSetBase {
               @Override
               public long cost() {
                 // we don't want to actually compute cardinality, but
-                // if its already been computed, we use it
+                // if its already been computed, we use it (pro-rated for the segment)
                 if (size != -1) {
-                  return size;
+                  return (long)(size * ((OpenBitSet.bits2words(maxDoc)<<6) / (float)bs.capacity()));
                 } else {
-                  return bs.capacity();
+                  return maxDoc;
                 }
               }
             };
